5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_1332.log
== SUBMITION (2019-03-13 11:04:52) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 

-- EXECUTION TIME:
0.151174
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:13:48) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 

-- EXECUTION TIME:
0.174287
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:19:42) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2/1)
 

-- EXECUTION TIME:
0.290014
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:20:27) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**0.5)
 

-- EXECUTION TIME:
0.133548
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:21:14) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2*)
 

-- EXECUTION TIME:
0.21636
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2)*(3**0.5*aresta**2*)
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:42:14) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2*)
print (3/2)*(3**(round0.5)*aresta**2)
 

-- EXECUTION TIME:
0.143178
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2)*(3**0.5*aresta**2*)
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:21:12) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 

-- EXECUTION TIME:
0.127221
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 23:06:31) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 

-- EXECUTION TIME:
0.150974
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 23:09:19) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 

-- EXECUTION TIME:
0.187117
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 23:13:52) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 

-- EXECUTION TIME:
0.16866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 12:42:28) 
-- CODE:
import math
a== 5
quadrado =  math.sqrt(3)
area = (2/3)*(quadrada*(a**a))
 resultado= round(area,4)
print(resultado)
-- EXECUTION TIME:
0.20558
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 5
    resultado= round(area,4)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 12:48:31) 
-- CODE:
aresta= 5
area = (3/2*(3**0.5aresta**2))
print(round(area,4))
-- EXECUTION TIME:
0.103172
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2*(3**0.5aresta**2))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:10:28) 
-- CODE:
aresta= 5
area = (3/2*(3**0.5aresta**2))

print(round(3/2*3**0.5*5**,4))
-- EXECUTION TIME:
0.138373
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2*(3**0.5aresta**2))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:13:22) 
-- CODE:
aresta= 5
area = (3/2*(3**0.5aresta**2))

print(round(3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.192079
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2*(3**0.5aresta**2))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:16:17) 
-- CODE:
aresta= 5
area = (3/2)*(3**0.5aresta**2))

print(round(3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.198209
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2)*(3**0.5aresta**2))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:16:41) 
-- CODE:
aresta= 5
area = (3/2)*(3**0.5aresta**2)

print(round(3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.153803
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = (3/2)*(3**0.5aresta**2)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:02:14) 
-- CODE:

aresta = 5
area = 3/2*(((3)**0.5)*5**2)
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:02:27) 
-- CODE:

aresta = 5
area = 3/2*(((3)**0.5)*5**2)
print(round(area, 4))
-- EXECUTION TIME:
0.145508
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
